expense module fix
